data/derived/fa15/progs/unify/prog2474.ml.out
Characters 15-16:
  let _ = sqsum [1;2;3;4];;
                 ^
Error: This expression has type int but an expression was expected of type
         int list
